--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,7 @@
         "ARENA_THIS_WEEK",
         "HONOR_LASTWEEK",
         "BONUS_ROLL_REWARD_MONEY",
-        "ADD"
+        "ADD",
+        "GameTooltipText"
     ]
 }
