--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "HONOR_LASTWEEK",
         "BONUS_ROLL_REWARD_MONEY",
         "ADD",
-        "GameTooltipText"
+        "GameTooltipText",
+        "NORMAL_FONT_COLOR_CODE"
     ]
 }
