--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,28 @@
         "BONUS_ROLL_REWARD_MONEY",
         "ADD",
         "GameTooltipText",
-        "NORMAL_FONT_COLOR_CODE"
+        "NORMAL_FONT_COLOR_CODE",
+        "PaperDollFrame",
+        "InspectFrame",
+        "CharacterFrame",
+        "InspectFrame_UnitChanged",
+        "DressUpItemLink",
+        "ChatEdit_InsertLink",
+        "BLUE_FONT_COLOR",
+        "REPUTATION",
+        "STANDING",
+        "UNKNOWN",
+        "MAJOR_FACTION_RENOWN_LEVEL_TOAST",
+        "BOUNTY_TUTORIAL_BOUNTY_FINISHED",
+        "GameTooltip_Hide",
+        "COMPLETE",
+        "ITEM_QUALITY_COLORS",
+        "STATUS_TEXT_PERCENT",
+        "RaidNotice_AddMessage",
+        "StaticPopup_Hide",
+        "StaticPopupSpecial_Hide",
+        "LE_GAME_ERR_GUILD_NOT_ENOUGH_MONEY",
+        "LE_GAME_ERR_NOT_ENOUGH_MONEY",
+        "MAX_PARTY_MEMBERS"
     ]
 }
