--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,11 @@
         "StaticPopupSpecial_Hide",
         "LE_GAME_ERR_GUILD_NOT_ENOUGH_MONEY",
         "LE_GAME_ERR_NOT_ENOUGH_MONEY",
-        "MAX_PARTY_MEMBERS"
+        "MAX_PARTY_MEMBERS",
+        "CombatText_AddMessage",
+        "CombatText_StandardScroll",
+        "UIErrorsFrame",
+        "RaidWarningFrame",
+        "CombatText_UpdateDisplayedMessages"
     ]
 }
