--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
         "CombatText_UpdateDisplayedMessages",
         "INVSLOT_FIRST_EQUIPPED",
         "INVSLOT_LAST_EQUIPPED",
-        "EquipmentManager_UnpackLocation"
+        "EquipmentManager_UnpackLocation",
+        "NUM_CHAT_WINDOWS"
     ]
 }
