Added option to test current settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -121,6 +121,7 @@
         "UNLOCK",
         "TRACKER_HEADER_PROVINGGROUNDS",
         "QuestMapFrame_UpdateAll",
-        "MAX_QUESTS"
+        "MAX_QUESTS",
+        "ID"
     ]
 }
