--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -122,6 +122,10 @@
         "TRACKER_HEADER_PROVINGGROUNDS",
         "QuestMapFrame_UpdateAll",
         "MAX_QUESTS",
-        "ID"
+        "ID",
+        "PanelTemplates_TabResize",
+        "PanelTemplates_SetDisabledTabState",
+        "PanelTemplates_SelectTab",
+        "PanelTemplates_DeselectTab"
     ]
 }
