--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -126,6 +126,8 @@
         "PanelTemplates_TabResize",
         "PanelTemplates_SetDisabledTabState",
         "PanelTemplates_SelectTab",
-        "PanelTemplates_DeselectTab"
+        "PanelTemplates_DeselectTab",
+        "ChatFontSmall",
+        "GameFontHighlightSmallOutline"
     ]
 }
