--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,6 +128,7 @@
         "PanelTemplates_SelectTab",
         "PanelTemplates_DeselectTab",
         "ChatFontSmall",
-        "GameFontHighlightSmallOutline"
+        "GameFontHighlightSmallOutline",
+        "INFO"
     ]
 }
