Fixes to pesky disabled state not telling everyone they should shut up :-)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -129,6 +129,68 @@
         "PanelTemplates_DeselectTab",
         "ChatFontSmall",
         "GameFontHighlightSmallOutline",
-        "INFO"
+        "INFO",
+        "GetFactionInfoByID",
+        "C_GossipInfo",
+        "C_Reputation",
+        "C_MajorFactions",
+        "ExpandAllFactionHeaders",
+        "UnitSex",
+        "GetNumFactions",
+        "GetFactionInfo",
+        "CollapseFactionHeader",
+        "GetWatchedFactionInfo",
+        "SetWatchedFactionIndex",
+        "C_Timer",
+        "time",
+        "GetCurrentCombatTextEventInfo",
+        "format",
+        "ExpandFactionHeader",
+        "mod",
+        "CreateFrame",
+        "geterrorhandler",
+        "IsLoggedIn",
+        "UIParent",
+        "PlaySound",
+        "GetRealmName",
+        "UnitName",
+        "UnitClass",
+        "UnitRace",
+        "UnitFactionGroup",
+        "GetCurrentRegion",
+        "GetLocale",
+        "wipe",
+        "BackdropTemplateMixin",
+        "PlaySoundFile",
+        "GetCursorInfo",
+        "ClearCursor",
+        "GetSpellInfo",
+        "hooksecurefunc",
+        "GetMacroInfo",
+        "IsShiftKeyDown",
+        "IsControlKeyDown",
+        "IsAltKeyDown",
+        "CreateFont",
+        "GetTime",
+        "tinsert",
+        "tremove",
+        "Minimap",
+        "WOW_PROJECT_ID",
+        "WOW_PROJECT_MAINLINE",
+        "IsInRaid",
+        "IsInGroup",
+        "SendChatMessage",
+        "EnableAddOn",
+        "GetCVar",
+        "GetChannelList",
+        "GetChannelName",
+        "IsAddOnLoaded",
+        "LoadAddOn",
+        "SetCVar",
+        "UIFrameFadeIn",
+        "BreakUpLargeNumbers",
+        "strlower",
+        "GetChatWindowInfo",
+        "GetAddOnMetadata"
     ]
 }
