Added [standingNext] TAGs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -191,6 +191,8 @@
         "BreakUpLargeNumbers",
         "strlower",
         "GetChatWindowInfo",
-        "GetAddOnMetadata"
+        "GetAddOnMetadata",
+        "RolePollPopup",
+        "RolePollPopupAcceptButton"
     ]
 }
