support for Addon compartment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -193,6 +193,7 @@
         "GetChatWindowInfo",
         "GetAddOnMetadata",
         "RolePollPopup",
-        "RolePollPopupAcceptButton"
+        "RolePollPopupAcceptButton",
+        "AddonCompartmentFrame"
     ]
 }
