--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -164,7 +164,6 @@
         "PlaySoundFile",
         "GetCursorInfo",
         "ClearCursor",
-        "GetSpellInfo",
         "hooksecurefunc",
         "GetMacroInfo",
         "IsShiftKeyDown",
@@ -180,18 +179,14 @@
         "IsInRaid",
         "IsInGroup",
         "SendChatMessage",
-        "EnableAddOn",
         "GetCVar",
         "GetChannelList",
         "GetChannelName",
-        "IsAddOnLoaded",
-        "LoadAddOn",
         "SetCVar",
         "UIFrameFadeIn",
         "BreakUpLargeNumbers",
         "strlower",
         "GetChatWindowInfo",
-        "GetAddOnMetadata",
         "RolePollPopup",
         "RolePollPopupAcceptButton",
         "AddonCompartmentFrame",
@@ -223,6 +218,45 @@
         "MerchantFrame",
         "OPTIONS",
         "SHOW_TUTORIALS",
-        "ChatFrame1EditBox"
+        "ChatFrame1EditBox",
+        "select",
+        "ipairs",
+        "IsInGuild",
+        "pairs",
+        "print",
+        "next",
+        "table",
+        "type",
+        "GetGuildInfo",
+        "math",
+        "tonumber",
+        "_G",
+        "tostring",
+        "unpack",
+        "loadstring",
+        "assert",
+        "error",
+        "setmetatable",
+        "getmetatable",
+        "rawset",
+        "rawget",
+        "xpcall",
+        "string",
+        "pcall"
+    ],
+    "Lua.runtime.version": "Lua 5.1",
+    "Lua.runtime.builtin": {
+        "basic": "disable",
+        "debug": "disable",
+        "io": "disable",
+        "math": "disable",
+        "os": "disable",
+        "package": "disable",
+        "string": "disable",
+        "table": "disable",
+        "utf8": "disable"
+    },
+    "Lua.workspace.library": [
+        "~\\.vscode\\extensions\\ketho.wow-api-0.16.8\\Annotations"
     ]
 }
