--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,6 @@
         "FACTION_BAR_COLORS",
         "CloseDropDownMenus",
         "StaticPopupDialogs",
-        "GetText",
         "ToggleCharacter",
         "ToggleDropDownMenu",
         "ChatEdit_FocusActiveWindow",
@@ -70,7 +69,6 @@
         "GENERAL_CHAT_DOCK",
         "LE_LFG_CATEGORY_LFR",
         "LE_LFG_CATEGORY_LFD",
-        "GetCursorPosition",
         "HONOR_TODAY",
         "HONOR_YESTERDAY",
         "ARENA_THIS_WEEK",
@@ -131,62 +129,21 @@
         "GameFontHighlightSmallOutline",
         "INFO",
         "GetFactionInfoByID",
-        "C_GossipInfo",
-        "C_Reputation",
-        "C_MajorFactions",
         "ExpandAllFactionHeaders",
-        "UnitSex",
         "GetNumFactions",
         "GetFactionInfo",
         "CollapseFactionHeader",
         "GetWatchedFactionInfo",
         "SetWatchedFactionIndex",
-        "C_Timer",
-        "time",
-        "GetCurrentCombatTextEventInfo",
-        "format",
         "ExpandFactionHeader",
-        "mod",
-        "CreateFrame",
-        "geterrorhandler",
-        "IsLoggedIn",
         "UIParent",
-        "PlaySound",
-        "GetRealmName",
-        "UnitName",
-        "UnitClass",
-        "UnitRace",
-        "UnitFactionGroup",
-        "GetCurrentRegion",
-        "GetLocale",
-        "wipe",
         "BackdropTemplateMixin",
-        "PlaySoundFile",
-        "GetCursorInfo",
-        "ClearCursor",
-        "hooksecurefunc",
-        "GetMacroInfo",
-        "IsShiftKeyDown",
-        "IsControlKeyDown",
-        "IsAltKeyDown",
-        "CreateFont",
-        "GetTime",
-        "tinsert",
-        "tremove",
         "Minimap",
         "WOW_PROJECT_ID",
         "WOW_PROJECT_MAINLINE",
-        "IsInRaid",
-        "IsInGroup",
-        "SendChatMessage",
         "GetCVar",
-        "GetChannelList",
-        "GetChannelName",
         "SetCVar",
         "UIFrameFadeIn",
-        "BreakUpLargeNumbers",
-        "strlower",
-        "GetChatWindowInfo",
         "RolePollPopup",
         "RolePollPopupAcceptButton",
         "AddonCompartmentFrame",
@@ -218,31 +175,7 @@
         "MerchantFrame",
         "OPTIONS",
         "SHOW_TUTORIALS",
-        "ChatFrame1EditBox",
-        "select",
-        "ipairs",
-        "IsInGuild",
-        "pairs",
-        "print",
-        "next",
-        "table",
-        "type",
-        "GetGuildInfo",
-        "math",
-        "tonumber",
-        "_G",
-        "tostring",
-        "unpack",
-        "loadstring",
-        "assert",
-        "error",
-        "setmetatable",
-        "getmetatable",
-        "rawset",
-        "rawget",
-        "xpcall",
-        "string",
-        "pcall"
+        "ChatFrame1EditBox"
     ],
     "Lua.runtime.version": "Lua 5.1",
     "Lua.runtime.builtin": {
@@ -257,6 +190,6 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "~\\.vscode\\extensions\\ketho.wow-api-0.16.8\\Annotations"
+        "~\\.vscode\\extensions\\ketho.wow-api-0.17.4\\Annotations"
     ]
 }
