--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -218,5 +218,8 @@
     },
     "Lua.workspace.library": [
         "~\\.vscode\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core"
+    ],
+    "Lua.diagnostics.disable": [
+        "assign-type-mismatch"
     ]
 }
